--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action=""></form>
+    <form action="">probando</form>
     
 </body>
 </html>
